--- a/frontend/src/components/Nav/Nav.css
+++ b/frontend/src/components/Nav/Nav.css
@@ -4,17 +4,14 @@
   padding: 10px 10px;
 }
 
-.nav-welcome {
+.nav-name {
   margin-left: 20px;
   flex: 1;
   align-self: center;
 }
 
-.nav-welcome-name {
-  font-weight: 625;
-}
-
 .nav-logout {
+  margin-right: 20px;
   cursor: pointer;
   align-self: center;
 }
